# python-aio-periodic

./: CHANGELOG.md  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: examples.yml  lint.yml  python-publish.yml  rsa-examples.yml
aio_periodic/: __init__.py  blueprint.py  client.py  job.py  pool.py  protocol.py  rsp.py  transport.py  typing.py  utils.py  worker.py
aio_periodic/types/: agent.py  base_client.py  command.py  job.py  utils.py
examples/: echo_client.py  echo_client_cluster.py  echo_worker.py  echo_worker_cluster.py
tests/: test_base_client_reconnect.py
